<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserAccount.Fragments.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupTitle"
        android:text="@string/signupTitle"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:textColor="@color/blue"
        android:textSize="28sp"
        />

    <EditText
        android:id="@+id/uNameid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:drawableStart="@drawable/ic_identification"
        android:drawablePadding="15dp"
        android:paddingBottom="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <EditText

        android:id="@+id/signupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginLeft="15dp"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        />
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_key"
        android:drawablePadding="15dp"
        android:paddingStart="10dp"
        android:layout_marginLeft="15dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        />


    <EditText
        android:id="@+id/signupPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginLeft="15dp"
        android:paddingStart="10dp"
        android:inputType="number"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"

        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/checkboxterms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms1"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/terms2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"

                android:text="@string/terms2"
                android:textColor="@color/blue"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>






    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms3"
            android:text="@string/and"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="14dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms4"
            android:text="@string/terms3"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="@color/blue"
            android:textSize="14dp"

            />
    </LinearLayout>


    <TextView
        android:id="@+id/bid"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/rectanglebox"
        android:backgroundTint="#145EF0"
        android:layout_marginTop="20dp"
        />

    <ProgressBar
        android:id="@+id/circularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</LinearLayout>