<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserAccount.Fragments.LogInFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/loginTitle"
        android:paddingLeft="50dp"
        android:textStyle="bold"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/blue"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        >


        <EditText
            android:id="@+id/eid"
            android:drawableLeft="@drawable/ic_user"
            android:hint="Email ID"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="15dp"
            android:layout_marginLeft="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="18dp"
            android:textSize="16sp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >

            <EditText
                android:id="@+id/pid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="15dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkMyLoggedIn"
                android:text="@string/remember"
                android:textColor="#145CD6"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <!--                <TextView-->
            <!--                    android:id="@+id/remember"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_alignParentEnd="true"-->
            <!--                    android:layout_centerVertical="true"-->
            <!--                    -->
            <!--                    android:paddingRight="30dp"-->
            <!--                    android:text="@string/remember"-->
            <!--                    android:textColor="#145CD6"-->
            <!--                    android:textSize="18sp"-->
            <!--                    android:textStyle="bold" />-->


            <TextView
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"

                android:text="@string/forgetPassword"
                android:textColor="#145CD6"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/bid"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/rectanglebox"
            android:backgroundTint="#145EF0"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/circularProgress"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

</LinearLayout>